fixed google search drop down width on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,7 @@ nav {
 
 #cities-autocomplete {
     text-align: center;
+    max-width: 100%;
 }
 
 .characters {
@@ -377,6 +378,10 @@ a:visited {
         vertical-align: middle;
     }
 
+    .pac-container {
+        max-width: 450px;
+    }
+
     .modal-content,
     .directionsTitle,
     .directionsSubTitle,
@@ -420,9 +425,22 @@ a:visited {
     #modal-button {
         font-size: 1.0em;
     }
+
+    .pac-container {
+        max-width: 425px;
+    }
+}
+
+@media (max-width: 600px) {
+    .pac-container {
+        max-width: 375px;
+    }
 }
 
 @media (max-width: 500px) {
+    .pac-container {
+        max-width: 375px;
+    }
     .profileRecs {
         width: 70%;
     }
@@ -435,7 +453,16 @@ a:visited {
     }
 }
 
+@media (max-width: 450px) {
+    .pac-container {
+        max-width: 330px;
+    }
+}
+
 @media (max-width: 400px) {
+    .pac-container {
+        max-width: 275px;
+    }
     .navTitleLP {
         margin-top: 55%;
     }
@@ -446,5 +473,17 @@ a:visited {
 
     .modal-content {
         scale: .75;
+    }
+}
+
+@media (max-width: 375px) {
+    .pac-container {
+        max-width: 250px;
+    }
+}
+
+@media (max-width: 350px) {
+    .pac-container {
+        max-width: 215px;
     }
 }
